--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
+    "lodash": "^4.17.21",
     "minimatch": "^3.1.2",
     "ms": "^2.1.3",
+    "mysql2": "^3.11.3",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
     "protobufjs": "^7.4.0",
@@ -41,7 +43,8 @@
     "uuid": "^11.0.2"
   },
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "migrate": "node src/db/migrations/createSchema.js"
   },
   "keywords": [],
   "author": "",
