--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "minimatch": "^3.1.2",
     "ms": "^2.1.3",
     "mysql2": "^3.11.3",
+    "net": "^1.0.2",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
     "protobufjs": "^7.4.0",
